Revision history for Perl extension PPI

1.116   ...
	Summary:
        - PPI::Document::File
	- Adding readonly attribute
	- Various accumulated bugs

	Details:
	- Upgraded to Module::Install 0.63
        - Add a new file-only subclass of PPI::Document
	- Added the readonly attribute to the PPI::Document->new constructor
	- Added method PPI::Document->readonly method
        - 'goto' is a PPI::Statement::Break
	- Re-fixed #19629: End of list mistakenly seen as end of statement
	- Applied #16892: [PATCH] docs and comments

1.115   Sat 03 Jun 2006
	Summary:
	- Fixing rt.cpan.org bugs

	Details:
	- Fixed #19614: Suspicious code in PPI::Structure
	- Fixed #16831: until () { } not parsed as compound statement
	- NOTABUG #16834: "$a = 1 if ($a == 2)" vs "$a = 1 if $a == 2"
	- Fixed #19629: End of list mistakenly seen as end of statement
	- Fixed #18413: PPI::Node prune() implementation broken

1.114   Thu 25 May 2006
	Summary:
	- This release addresses only dependency issues

	Details:
	- Changed over from IO::Scalar to IO::String
	- Added a dependency on Task::Weaken so that we can make
	  various not-so-clueful downstream packagers play nicely.

1.113   Wed 10 May 2006
	Summary:
	- This release contains only build-time changes

	Details:
	- Upgraded to Module::Install 0.62
	- No features() used in this dist, so removing auto_install

1.112   Mon 24 Apr 2006
	Summary:
	- Emergency release to fix a bug that prevents install on perl > 5.8.4

	Details:
	- Small typo in the unicode-specific section of 14_charsets.t
	  prevents tests passing for anyone with a unicode-sane Perl version.
	- Added a test for strange locales that can't handle unicode,
	  and skip the unicode tests.

1.111   Sat 22 Apr 2006
	General
	- Moved from SourceForge CVS to new collaborative SVN repository
	- Fixed regressions other people had added since 1.110
	- Upgraded to Module::Install 0.62

	Details:
	- SourceForge was too hard to get into, so moved to specially designed