@@ -111,7 +111,7 @@ BEGIN {
 	foreach ( qw!; [ ] { } )! )                       { $COMMITMAP[ord $_] = 'PPI::Token::Structure' }
 	foreach ( 0 .. 9 )                                { $CLASSMAP[ord $_]  = 'Number'   }
 	foreach ( qw{= ? | + > . ! ~ ^} )                 { $CLASSMAP[ord $_]  = 'Operator' }
-	foreach ( qw{* $ @ & : - %} )                     { $CLASSMAP[ord $_]  = 'Unknown'  }
+	foreach ( qw{* $ @ & : %} )                       { $CLASSMAP[ord $_]  = 'Unknown'  }
 
 	# Miscellaneous remainder
 	$COMMITMAP[ord '#'] = 'PPI::Token::Comment';
@@ -352,6 +352,19 @@ sub __TOKENIZER__on_char {
 
 		# Otherwise, commit like a normal bareword
 		return PPI::Token::Word->__TOKENIZER__commit($t);
+
+	} elsif ( $_ == 45 ) { # $_ eq '-'
+		# Look for an obvious operator operand context
+		my $context = $t->_opcontext;
+		if ( $context eq 'operator' ) {
+			return 'Operator';
+		} elsif ( $context eq 'operand' ) {
+			return 'Number';
+		} else {
+			# More logic needed
+			return 'Unknown';
+		}
+
 	} elsif ( $_ >= 128 ) { # Outside ASCII
             return 'PPI::Token::Word'->__TOKENIZER__commit($t) if $t =~ /\w/;
             return 'Whitespace' if $t =~ /\s/;
